--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/sirxemic/jquery.ripples/jquery.ripples.js"></script>
